welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:40: error: value avance is not a member of Unit
  avance(3);droite()avance(2);gauche();
                    ^